Minimig changelog
-----------------

Authors:
DW - Dennis van Weeren
JB - Jakub Bednarski
SB - Sascha Boing
AR - A.M. Robinson
TH - Till Harbaum
RK - Rok Krajnc


2015-06-12 - RK - USERIO       - chipset config is now applied on reset only
2015-06-12 - RK - MINIMIG      - added turbo options for chipRAM & kickROM
2015-06-10 - RK - CACHE        - updated cpu cache; working fastRAM, kickstart cache, chipRAM (non-cached)
2015-06-04 - TH - TG68         - PACK, UNPK instructions fix
2015-06-01 - RK - DENISE       - another (final!) SSCAN2 fix (SH10 coincidence detection) - Fantastic Dizzy works now
2015-06-01 - RK - AGNUS        - implemented sprite scandoubling (to be tested!)
2015-06-01 - RK - MIST         - updated global makefile
2015-06-01 - RK - DENISE       - fixed a bug in sprite scandoubler (should fix Fantastic Dizzy CD32)
2015-05-31 - RK - DENISE       - another fix for playfield CLUT offsets
2015-05-31 - RK - TG68         - enabled & fixed ROM cache; proper turbochipram enable signal
2015-05-30 - TH - TG68         - partial fix for UNPK instruction (needed by Slam Tilt)
2015-05-30 - RK - DENISE       - added (theoretical) delay to BPLCON4 values; fixed (big!) bug with extra_delay values when fetchmode > 0; added another fix for AGA quarter pixel scrolling (probably not completely correct!); more color fixes (wrong implementation of SWIV special feature); even more colortable fixes
2015-05-30 - RK - AGNUS        - added bitplane scandoubling support
2015-05-29 - RK - USERIO       - implemented proper RTL version register
2015-05-29 - RK - DENISE       - implemented proper AGA bitplane scroller; fixed erroneous enabling of ham & ehb modes; fixed color problems; sprite enable/disable signal fix (Coppermaster demo & More Lemmings game)