@@ -1,8 +1,11 @@
 FIX FIRST
-- support for 256kB, 1MB ROMs & Cloanto AmigaForever encrypted ROMs
-- fix keyboard / mouse issues
+- support for 256kB, 1MB ROMs & Cloanto AmigaForever encrypted ROMs - ONGOING
+- fix keyboard / mouse issues - DONE
+- add support for AROS ROM - DONE
+- add support for AROS - ONGOING (IDE problems)
 - implement audio volume control (full, half, quarter?)
 - try to fix clock/sdram issues
+
 
 IMPORTANT - AGA CHIPSET stuff
 - increment hpos counter in denise by two LSB bits (35ns counter)
@@ -18,25 +21,19 @@ IMPORTANT - AGA CHIPSET stuff
   * Writing to BPLxPT when exactly next cycle has DMA to matching BPLxDAT: write goes nowhere. (Same happens with sprites and blitter registers too, I assume all DMA channels have similar internal 2 cycle pipeline)
   * Another similar special feature is bitplane modulos, writing to BPLxMOD when exactly next cycle is matching BPLxDAT write and it also does modulo add, _old_ modulo value is used! (Write to BPLxMOD is still accepted, next time BPLxMOD value is needed it is used normally)
 - sprites can be positioned on 35ns pixels - to add! - I think I did this - CHECK
-- sprite scandoubling DONE (and fixed, and fixed the fix)
-- bitplanes scandoubling DONE
 - add CD32 gamepad emulation and / or real amiga cd32 gamepad support (http://gerdkautzmann.de/cd32gamepad/cd32gamepad.html)
 
+
 IMPORTANT - CPU stuff
-- CPU : add PACK & UNPK imstruction support (TG68KdotC_kernel.vhd, from line 2236 on -- also look at 68000 programmer's reference!) (Till Harbaum working on this, partial fix by Till Harbaum available)
-- CPU really needs chipRAM 'turbo' reads AND writes! DONE, to CHECK
+- CPU : add PACK & UNPK instruction support - DONE by Till
 - CPU compatibility fixes are a must!
 - CPU fix cart compatibility problems (overlay detection should be moved to TG68K.vhd); big problems with turbo kickstart - CHECK
 - CPU kickstart turbo - DONE, some problems remain - CHECK
-- CPU chipRAM turbo - DONE, only using fastRAM path, not cached currently
+- CPU chipRAM turbo - DONE, need to enable cache for chipRAM
 
 
 MEDIUM - mostly firmware stuff
-- fix firmware config, display config, mostly done, CHECK
 - joystick autofire menu ?
-- cpu turbo enable menu DONE
-- fast kickstart rtl / menu DONE
-- 1MB kickstart
 
 
 LOW - waaay down the line
