@@ -99,6 +99,7 @@ module ciaa
   inout  kbdclk,        // ps2 keyboard clock
   input  keyboard_disabled,  // disable keystrokes
   input kbd_mouse_strobe,
+  input kms_level,
   input [1:0] kbd_mouse_type,
   input [7:0] kbd_mouse_data,
   output  [7:0] osd_ctrl,    // osd control
@@ -211,6 +212,80 @@ always @(posedge clk)
 
 `else
 
+//`define NEW_KEYB
+`ifdef NEW_KEYB
+// MiST keyboard
+reg  [ 2:0] kms_level_sync;
+wire        kms;
+reg  [ 7:0] kmd_sync[0:1];
+wire [ 7:0] kmd;
+reg  [ 1:0] kmt_sync[0:1];
+wire [ 1:0] kmt;
+reg  [ 7:0] osd_ctrl_reg;
+reg         freeze_reg=0;
+
+// sync kms_level to clk28
+always @ (posedge clk) begin
+  if (clk7_en) begin
+    kms_level_sync <= #1 {kms_level_sync[1:0], kms_level};
+  end
+end
+
+//recreate kbd_mouse strobe in clk28 domain
+assign kms = kms_level_sync[2] ^ kms_level_sync[1];
+
+// synced data
+assign kmt = kmt_sync[1];
+assign kmd = kmd_sync[1];
+
+// sync kbd_mouse_data to clk28
+always @ (posedge clk) begin
+  if (clk7_en) begin
+    kmd_sync[0] <= #1 kbd_mouse_data;
+    kmd_sync[1] <= #1 kmd_sync[0];
+    kmt_sync[0] <= #1 kbd_mouse_type;
+    kmt_sync[1] <= #1 kmt_sync[0];
+  end
+end
+
+// sdr register
+// !!! Amiga receives keycode ONE STEP ROTATED TO THE RIGHT AND INVERTED !!!
+always @ (posedge clk) begin
+  if (clk7_en) begin
+    if (reset) begin
+      sdr_latch[7:0] <= 8'h00;
+      freeze_reg <= #1 1'b0;
+    end else if (kms && (kmt == 2) && ~keyboard_disabled) begin
+      sdr_latch[7:0] <= ~{kmd[6:0],kmd[7]};
+      if (kmd == 8'h5f) freeze_reg <= #1 1'b1;
+      else freeze_reg <= #1 1'b0;
+    end else if (wr & sdr) begin
+        sdr_latch[7:0] <= data_in[7:0];
+    end
+  end
+end
+
+always @ (posedge clk) begin
+  if (clk7_en) begin
+    if (reset)
+      osd_ctrl_reg[7:0] <= 8'd0;
+    else if (kms && ((kmt == 2) || (kmt == 3)))
+      osd_ctrl_reg[7:0] <= kbd_mouse_data;
+  end
+end
+
+assign kbdrst = 1'b0;
+assign _lmb = 1'b1;
+assign _rmb = 1'b1;
+assign _joy2 = 6'b11_1111;
+assign joy_emu = 6'b11_1111;
+assign mou_emu = 6'b11_1111;
+assign freeze = freeze_reg;
+assign aflock = 1'b0;
+assign keystrobe = kms && ((kmt == 2));
+assign osd_ctrl = osd_ctrl_reg;
+
+`else
 assign kbdrst = 1'b0;
 assign _lmb = 1'b1;
 assign _rmb = 1'b1;
@@ -224,7 +299,7 @@ assign aflock = 1'b0;
 reg [7:0] osd_ctrl_reg;
 
 reg keystrobe_reg;
-assign keystrobe = keystrobe_reg;
+assign keystrobe = keystrobe_reg && ((kbd_mouse_type == 2) || (kbd_mouse_type == 3));
 
 assign osd_ctrl = osd_ctrl_reg;
 
@@ -266,8 +341,10 @@ end
 
 `endif
 
+`endif
 
-// sdr register  read
+
+// sdr register read
 assign sdr_out = (!wr && sdr) ? sdr_latch[7:0] : 8'h00;
 // keyboard acknowledge
 assign keyack = (!wr && sdr) ? 1'b1 : 1'b0;
